# SciAgent

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: test.yml
examples/Problems/IChO25/problem1/: theory1.md
examples/Problems/IChO25/problem_test/: theory1.md
examples/Problems/IPhO25/problem3/: theory3.md
examples/Problems/IPhO25/problem_test/: theory1.md
examples/Problems/IPhO25/theory1/: theory1.md
examples/Problems/IPhO25/theory2/: theory2.md
run_scripts/: batchrun_Olympics.py  batchrun_science.py  run.sh
sciagent/: scicodeagent.py  scimonitoring.py
smolagents/: agents.py  utils.py
smolagents/prompts/: code_agent.yaml
src/sciagent/: __init__.py
src/sciagent/agents/: scicodeagent.py
src/sciagent/tools/: __init__.py  breakdownTools.py  imgTools.py  reviewTools.py  summemoryTools.py
src/sciagent/utils/: markdown_utils.py
test/: run.py
tools/: breakdownTools.py  imgTools.py  rag_system.py  reviewTools.py  smilesTools.py
tools/data/algorithms/: greedy_algorithms.json  stl_sort_search.json
utils/: __init__.py  breakdownTools.py  imgTools.py  ragTools.py  rag_system.py  reviewTools.py  summemoryTools.py
utils/data/algorithms/: graph_traversal_bfs_dfs.json  map_set_usage.json  prefix_sums_diff_arrays.json
utils/data/templates/: cpp_template.cpp
