[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciagent"
version = "0.1.0"
description = "SciAgent: A scientific agent project"
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Xuchen Li", email = "s-lxc24@bjzgca.edu.cn" },
  { name = "Ruitao Wu", email = "1441570802@qq.com" },
  { name = "Hao Liang",  email = "hao.liang@stu.pku.edu.cn" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]
keywords = ["agent", "AI"]

# 可选：命令行入口
[project.scripts]
sciagent = "sciagent.cli:main"

# 依赖从 requirements.txt 读取（保持你原来的做法）
[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

# 关键：告诉 setuptools 源码在 src 下
[tool.setuptools]
package-dir = { "" = "src" }

# 发现包：只找 src 下以 sciagent 开头的包
[tool.setuptools.packages.find]
where = ["src"]
include = ["sciagent*"]